// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Checkbox
    disabled={false}
    inputAttrs={
      Object {
        "className": "healtheintent-application",
      }
    }
    isInline={false}
    isLabelHidden={false}
    labelText="Do you have any Children?"
    labelTextAttrs={
      Object {
        "className": "healtheintent-label-text",
      }
    }
    name="children_present"
    value="children_present"
  >
    <div
      className="checkbox orion-fusion-theme"
    >
      <label
        className="label healtheintent-label-text"
      >
        <input
          className="native-input healtheintent-application"
          disabled={false}
          name="children_present"
          type="checkbox"
          value="children_present"
        />
        <span
          className="label-text"
        >
          Do you have any Children?
        </span>
      </label>
    </div>
  </Checkbox>
</ThemeContextProvider>
`;

exports[`should render a ChoiceField with a checkbox 1`] = `
<div
  className="checkbox"
>
  <label
    className="label healtheintent-label-text"
  >
    <input
      className="native-input healtheintent-application"
      disabled={false}
      name="children_present"
      type="checkbox"
      value="children_present"
    />
    <span
      className="label-text"
    >
      Do you have any Children?
    </span>
  </label>
</div>
`;

exports[`should render a checkbox 1`] = `
<div
  className="checkbox"
>
  <label
    className="label"
  >
    <input
      className="native-input"
      disabled={false}
      name={null}
      type="checkbox"
    />
    <span
      className="label-text"
    >
      Checkbox
    </span>
  </label>
</div>
`;

exports[`should render a checkbox with a hidden label 1`] = `
<div
  className="checkbox"
>
  <label
    className="label"
  >
    <input
      aria-label="Checkbox"
      checked={true}
      className="native-input"
      disabled={false}
      name={null}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="label-text is-hidden"
    />
  </label>
</div>
`;

exports[`should render a controlled checkbox 1`] = `
<div
  className="checkbox"
>
  <label
    className="label"
  >
    <input
      checked={true}
      className="native-input"
      disabled={false}
      name={null}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="label-text"
    >
      Checkbox
    </span>
  </label>
</div>
`;

exports[`should render a disabled checkbox 1`] = `
<div
  className="checkbox"
>
  <label
    className="label is-disabled"
  >
    <input
      checked={true}
      className="native-input"
      disabled={true}
      name={null}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="label-text"
    >
      Checkbox
    </span>
  </label>
</div>
`;

exports[`should render an uncontrolled checkbox 1`] = `
<div
  className="checkbox"
>
  <label
    className="label"
  >
    <input
      className="native-input"
      defaultChecked={true}
      disabled={false}
      name={null}
      type="checkbox"
    />
    <span
      className="label-text"
    >
      Checkbox
    </span>
  </label>
</div>
`;
